--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "type": "module",
   "schematics": "./collection.json",
   "files": [
-    "src",
-    "README.md",
-    "LICENSE",
-    "collection.json"
+    "dist/",
+    "collection.json",
+    "schema.json",
+    "README.md"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
