--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@angular-devkit/schematics": "^20.0.5",
     "@types/node": "^24.0.10",
+    "fs-extra": "^11.3.0",
     "typescript": "^5.8.3"
   },
   "devDependencies": {
