--- a/src/schematics/store/files/app-state-files/app-state.ts.template
+++ b/src/schematics/store/files/app-state-files/app-state.ts.template
@@ -1,6 +1,6 @@
 import { ActionReducerMap } from '@ngrx/store';
 <% if (separateFiles) { %>
-import { <%= classify(name) %>Reducer, <%= classify(name) %>State } from '../reducers/<%= dasherize(name) %>.reducer';
+import { <%= classify(name) %>Reducer, <%= classify(name) %>State } from './reducers/<%= dasherize(name) %>.reducer';
 <% } else { %>
 import { <%= classify(name) %>Reducer, <%= classify(name) %>State } from './<%= dasherize(name) %>';
 <% } %>
