--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngrx-store-cli",
-  "version": "1.0.6",
+  "version": "1.0.6-alpha",
   "description": "A schematic to generate NgRx store slices",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
